# QuickStart

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
.qoder/repowiki/zh/content/: 快速开始.md  故障排除与常见问题.md  部署指南.md  配置指南.md  项目概述.md
.qoder/repowiki/zh/content/API参考文档/: API参考文档.md
.qoder/repowiki/zh/content/API参考文档/前端API接口/: Hook函数接口.md  前端API接口.md  工具函数接口.md  状态管理API.md  组件API接口.md
.qoder/repowiki/zh/content/API参考文档/后端API接口/: Tauri命令接口.md  事件处理机制.md  后端API接口.md  数据库操作接口.md  系统集成API.md
.qoder/repowiki/zh/content/前端开发/: UI组件库.md  前端开发.md  性能优化.md  状态管理.md
.qoder/repowiki/zh/content/前端开发/React组件架构/: React组件架构.md  主组件设计.md  性能优化.md  状态管理.md  组件交互.md
.qoder/repowiki/zh/content/后端开发/: Rust后端模块.md  Tauri应用初始化.md  后端开发.md  命令系统.md  数据库设计.md
.qoder/repowiki/zh/content/架构设计/: 前端架构设计.md  后端架构设计.md  数据流设计.md  整体架构概览.md  架构设计.md  组件交互模式.md
.qoder/repowiki/zh/content/核心功能模块/: AI聊天系统.md  应用扫描器.md  搜索系统.md  智能分类系统.md  核心功能模块.md  语音输入系统.md
.qoder/repowiki/zh/content/系统集成/: 全局热键.md  安全配置.md  托盘集成.md  窗口管理.md  系统集成.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/superpowers/specs/: 2026-05-21-category-management-design.md
src/: AIChat.tsx  App.tsx  Settings.tsx  index.css  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  classifier.rs  commands.rs  db.rs  lib.rs  main.rs  pe_utils.rs  scanner.rs  tray.rs  window_utils.rs
src/lib/: utils.ts
